workflow ci.yml to .github/workflows/ci.yml

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,5 +28,4 @@ jobs:
         run: npm test
 
       - name: Simular despliegue
-        run: 
-          echo "Despliegue simulando: La aplicacion pasa el lint y las pruebas correcamente"
+        run: echo "Despliegue simulado exitosamente"
