--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node index.js",
     "test": "jest",
-    "lint": "eslint"
+    "lint": "eslint ."
   },
   "type": "module",
   "keywords": [],
