--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
         run: npm install
 
       - name: Lint del codigo
-        run: npm run Lint
+        run: npm run lint
 
       - name: Ejecutar pruebas
         run: npm test
