--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,3 +29,6 @@ jobs:
 
       - name: Simular despliegue
         run: echo "Despliegue simulado exitosamente"
+
+      - name: build
+        run: npm ci && npm run build
